--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="club-types.html">Club Types</a></li>
-            <li><a href="club-components.html">Club Components</a></li>
-            <li><a href="club-fitting.html">Club Fitting</a></li>
+            <li><a href="types.html">Club Types</a></li>
+            <li><a href="components.html">Club Components</a></li>
+            <li><a href="cfitting.html">Club Fitting</a></li>
             <li><a href="getting-fitted.html">Getting Fitted</a></li>
         </ul>
     </nav>
